# lunchmatch-ios

./: .gitignore  Podfile
LunchMatch/: ViewController.swift
LunchMatch.xcodeproj/: project.pbxproj
LunchMatch.xcodeproj/xcuserdata/b.xcuserdatad/xcschemes/: xcschememanagement.plist
LunchMatch/Base.lproj/: Main.storyboard
LunchMatch/Core/UI/: LMNavigationController.swift
LunchMatch/Features/History/Model/: HistoryItem.swift
LunchMatch/Features/History/View/: HistoryView.swift  MatchCollectionViewCell.swift  MatchCollectionViewCell.xib  MatchCollectionViewModel.swift
LunchMatch/Features/History/ViewController/: HistoryViewController.swift
LunchMatch/Features/Options/View/: OptionCollectionViewCell.xib  OptionsViewCollectionViewManager.swift
LunchMatch/Features/Options/ViewController/: OptionsViewController.swift
LunchMatch/Features/Room/Model/: RoomItem.swift  RoomRepository.swift
LunchMatch/Features/Room/View/: NameCollectionViewCell.swift  NameCollectionViewModel.swift  NamesCollectionViewManager.swift  RoomView.swift  RoomView.xib  RoomViewModel.swift
LunchMatch/Features/Room/ViewController/: RoomViewController.swift
api/: .gitignore  .scalafmt.conf  build.sbt
iOS/: Podfile
iOS/LunchMatch/: AppDelegate.swift  Info.plist  SceneDelegate.swift
iOS/LunchMatch.xcodeproj/: project.pbxproj
iOS/LunchMatch.xcworkspace/: contents.xcworkspacedata
iOS/LunchMatch/Assets.xcassets/Action.colorset/: Contents.json
iOS/LunchMatch/Base.lproj/: Main.storyboard
iOS/en.lproj/: Localizable.strings
python/: .gitignore  aito.ipynb  main.py  pyproject.toml
(+68 files in other folders)
