[tool.poetry]
name = "junction2020"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
jupyterlab = "^2.2.9"
aitoai = "^0.4.0"
gevent = "^20.9.0"
ws4py = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
